force-app/main/default/objects/Deal_Credit_Split__c/Deal_Credit_Split__c.object-meta.xml
<CustomObject>
    <description>RevenueTrust-owned credit split for a deal. Independent of Salesforce OpportunitySplit — works in any org regardless of Team Selling feature. Allows comp admins, deal owners, and managers to allocate commission credit across multiple participants with role-specific splits, approval workflow, and audit trail. Each record = one participant's credit allocation on one deal.</description>
    <label>Deal Credit Split</label>
    <nameField>
        <displayFormat>DCS-{000000}</displayFormat>
        <label>Split ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Credit Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>