force-app/main/default/objects/Deal_Credit_Split__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description>Approver's comments</description>
    <label>Approval Notes</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>