force-app/main/default/objects/Deal_Credit_Split__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>Manager or comp admin who approved this split</description>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Splits</relationshipLabel>
    <relationshipName>Approved_Splits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>