force-app/main/default/objects/Deal_Credit_Split__c/fields/Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Approved_On__c</fullName>
    <description>When the split was approved</description>
    <label>Approved On</label>
    <type>DateTime</type>
</CustomField>