force-app/main/default/objects/Deal_Credit_Split__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <description>The specific plan assignment this credit applies to. Determines rate structure.</description>
    <label>Comp Plan</label>
    <type>Lookup</type>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Credit Splits</relationshipLabel>
    <relationshipName>Credit_Splits_Plan</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>