force-app/main/default/objects/Deal_Credit_Split__c/fields/Counts_Toward_Quota__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Quota__c</fullName>
    <description>If true, this split's value credits toward the participant's quota attainment. If false, commission is paid but quota is not affected (e.g., overlay credit).</description>
    <label>Counts Toward Quota</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>