force-app/main/default/objects/Deal_Credit_Split__c/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <description>Who created this split (deal owner, manager, or comp admin)</description>
    <label>Created By User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Created Splits</relationshipLabel>
    <relationshipName>Created_Splits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>