force-app/main/default/objects/Deal_Credit_Split__c/fields/Effective_Commissionable_Value__c.field-meta.xml
<CustomField>
    <fullName>Effective_Commissionable_Value__c</fullName>
    <description>Computed: deal's commissionable value x split %. Or Split_Amount if fixed. This is what the commission engine uses.</description>
    <label>Effective Commissionable Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>