force-app/main/default/objects/Deal_Credit_Split__c/fields/Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Effective_End__c</fullName>
    <description>When this split expires. Null = no expiration (valid for life of the deal).</description>
    <label>Effective End</label>
    <type>Date</type>
</CustomField>