force-app/main/default/objects/Deal_Credit_Split__c/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <description>When this split becomes active. Null = effective immediately on approval.</description>
    <label>Effective Start</label>
    <type>Date</type>
</CustomField>