force-app/main/default/objects/Deal_Credit_Split__c/fields/External_Split_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Split_Id__c</fullName>
    <description>If synced from OpportunitySplit or external system, the source record ID.</description>
    <externalId>true</externalId>
    <label>External Split Id</label>
    <type>Text</type>
    <length>100</length>
    <unique>true</unique>
</CustomField>