force-app/main/default/objects/Deal_Credit_Split__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <description>True if this is the primary credit holder (typically the deal owner). Only one per deal should be primary.</description>
    <label>Is Primary</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>