force-app/main/default/objects/Deal_Credit_Split__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Free-text notes about this split allocation.</description>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>