force-app/main/default/objects/Deal_Credit_Split__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <description>The deal this split applies to</description>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Credit Splits</relationshipLabel>
    <relationshipName>Deal_Credit_Splits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>