force-app/main/default/objects/Deal_Credit_Split__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <description>The person receiving commission credit</description>
    <label>Participant</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Credit Splits</relationshipLabel>
    <relationshipName>Credit_Splits_User</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>