force-app/main/default/objects/Deal_Credit_Split__c/fields/Participant_Role__c.field-meta.xml
<CustomField>
    <fullName>Participant_Role__c</fullName>
    <description>The role under which this participant earns credit (AE, SE, BDR, etc.)</description>
    <label>Participant Role</label>
    <type>Lookup</type>
    <referenceTo>Participant_Role__c</referenceTo>
    <relationshipLabel>Credit Splits</relationshipLabel>
    <relationshipName>Credit_Splits_Role</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>