force-app/main/default/objects/Deal_Credit_Split__c/fields/Quota_Credit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Quota_Credit_Percentage__c</fullName>
    <description>If different from Split_Percentage — what % of the deal credits toward quota. Null = same as split %. Enables split where commission is on 50% but quota credits 100%.</description>
    <label>Quota Credit Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>