force-app/main/default/objects/Deal_Credit_Split__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>If rejected, why</description>
    <label>Rejection Reason</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>