force-app/main/default/objects/Deal_Credit_Split__c/fields/Split_Amount__c.field-meta.xml
<CustomField>
    <fullName>Split_Amount__c</fullName>
    <description>Fixed dollar amount override. If populated, takes precedence over Split_Percentage. Used for flat-amount overlays.</description>
    <label>Split Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>