force-app/main/default/objects/Deal_Credit_Split__c/fields/Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Percentage__c</fullName>
    <description>Percentage of the deal's commissionable value allocated to this participant. All splits on a deal should sum to 100% (validated by trigger).</description>
    <label>Split Percentage</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>