force-app/main/default/objects/Deal_Credit_Split__c/fields/Split_Type__c.field-meta.xml
<CustomField>
    <fullName>Split_Type__c</fullName>
    <description>Categorizes the nature of this credit allocation.</description>
    <label>Split Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Overlay</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Team_Pool</fullName>
            </value>
            <value>
                <fullName>Manager_Override</fullName>
            </value>
            <value>
                <fullName>Channel_Partner</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>